#3 added join/leave event
