# src/controllers/event.controller.ts
@@ -1,6 +1,5 @@
-import { Get, Path, Route, Tags } from "tsoa";
+import { Body, Delete, Get, Path, Post, Route, Tags } from "tsoa";
 import { eventService } from "../services/event.service";
-import { userService } from "../services/user.service";
 
 @Route("/api/event")
 @Tags("Events")
@@ -13,5 +12,17 @@ export class EventController {
   @Get("/getById/{id}")
   async getEventById(@Path() id: number) {
     return eventService.getEventById(id);
+  }
+
+  @Post("/join-event")
+  async joinEvent(@Body() payload: { eventId: number; username: string }) {
+    const { eventId, username } = payload;
+    return eventService.joinEvent(eventId, username);
+  }
+
+  @Delete("/leave-event")
+  async leaveEvent(@Body() payload: { eventId: number; username: string }) {
+    const { eventId, username } = payload;
+    return eventService.leaveEvent(eventId, username);
   }
 }
