# src/routers/user.router.ts
@@ -21,17 +21,27 @@ UserRouter.get("/getById/:id", async (req: Request<{ id: number }>, res) => {
   res.status(200).json({ user: data });
 });
 
-UserRouter.get("/getByUsername/:username", async (req: Request<{ username: string }>, res) => {
-  if (!req.params?.username) {
-    throw new Error("Param username is not found");
-  }
-  const data = await userController.getUserByUsername(req.params.username);
-  res.status(200).json({ user: data });
-});
+UserRouter.get(
+  "/getByUsername/:username",
+  async (req: Request<{ username: string }>, res) => {
+    if (!req.params?.username) {
+      throw new Error("Param username is not found");
+    }
+    const data = await userController.getUserByUsername(req.params.username);
+    res.status(200).json({ user: data });
+  },
+);
 
 UserRouter.put(
   "/update",
-  async (req: Request<{}, {}, TUserStatisticUpdatePayload>, res) => {
+  async (
+    req: Request<
+      Record<string, unknown>,
+      Record<string, unknown>,
+      TUserStatisticUpdatePayload
+    >,
+    res,
+  ) => {
     const updatedUser = await userController.updateUser(req.body);
     res.status(200).json(updatedUser);
   },
